style: fix Select custom tag align
close #28955

--- a/components/select/style/multiple.less
+++ b/components/select/style/multiple.less
@@ -24,6 +24,7 @@
 
   &-item {
     flex: none;
+    align-self: center;
     max-width: 100%;
   }
 }
